RESOLVED FIXED270075
HTMLDetailsElement::insertedIntoAncestor shouldn't mutate DOM tree
https://bugs.webkit.org/show_bug.cgi?id=270075
Summary HTMLDetailsElement::insertedIntoAncestor shouldn't mutate DOM tree
Ryosuke Niwa
Reported 2024-02-26 02:19:21 PST
It's forbidden to mutate DOM inside HTMLDetailsElement::insertedIntoAncestor. We should add do this mutation in HTMLDetailsElement::didFinishInsertingNode() instead.
Attachments
Ryosuke Niwa
Comment 1 2024-02-26 02:26:59 PST
EWS
Comment 2 2024-02-26 11:12:10 PST
Committed 275332@main (b033b4db86ad): <https://commits.webkit.org/275332@main> Reviewed commits have been landed. Closing PR #25095 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2024-02-26 11:13:19 PST
Note You need to log in before you can comment on or make changes to this bug.