HTMLDetailsElement::insertedIntoAncestor shouldn't mutate DOM tree https://bugs.webkit.org/show_bug.cgi?id=270075

Reviewed by Chris Dumez.

This PR moves the code to close other details elements, which mutates DOM state, from
HTMLDetailsElement::insertedIntoAncestor to HTMLDetailsElement::didFinishInsertingNode.

It also reinstates the unconditional debug assertion that the tree is allowed to mutate
in ContainerNode::removeNodeWithScriptAssertion. There is no point in making this a
release assert as ScriptDisallowedScope::InMainThread::isEventDispatchAllowedInSubtree
trivially returns true in release builds.

In addition, this PR moves the check of Document::shouldNotFireMutationEvents from
ContainerNode::removeNodeWithScriptAssertion to dispatchChildRemovalEvents so that
both removeAllChildrenWithScriptAssertion and removeNodeWithScriptAssertion will
respect this boolean state of document.

* Source/WebCore/dom/ContainerNode.cpp:
(WebCore::ContainerNode::removeAllChildrenWithScriptAssertion):
(WebCore::ContainerNode::removeNodeWithScriptAssertion):
(WebCore::dispatchChildRemovalEvents):
* Source/WebCore/html/HTMLDetailsElement.cpp:
(WebCore::HTMLDetailsElement::attributeChanged):
(WebCore::HTMLDetailsElement::insertedIntoAncestor):
(WebCore::HTMLDetailsElement::didFinishInsertingNode):
* Source/WebCore/html/HTMLDetailsElement.h:

Canonical link: https://commits.webkit.org/275332@main